<?xml version="1.0" encoding="utf-8"?>
<com.gridlayout.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:gridlayout="http://schemas.android.com/apk/res/me.rosebudClient"
    android:id="@+id/gridLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    gridlayout:columnCount="2"
    gridlayout:useDefaultMargins="true" >

    <EditText
        android:id="@+id/buyTickets_edtAmount"
        gridlayout:layout_column="1"
        gridlayout:layout_row="0"
        android:inputType="numberDecimal"
        android:text="1" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/buyTickets_btnCancel"
        gridlayout:layout_column="1"
        gridlayout:layout_row="1"
        android:text="@string/cancel" />

    <TextView
        android:id="@+id/textView1"
        gridlayout:layout_column="0"
        gridlayout:layout_row="0"
        android:text="@string/amountOfTicketsToBuy"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/buyTickets_btnBuy"
        android:layout_width="wrap_content"
        gridlayout:layout_column="0"
        gridlayout:layout_row="1"
        android:text="@string/buy" />

</com.gridlayout.GridLayout>